# Simpl_CompilerV1

./: .gitignore  CMakeLists.txt  EBNF.txt  Lexer.fa2l  README.md  SimplAst.cpp  SimplAst.hpp  SimplEvaluator.cpp  SimplEvaluator.hpp  SimplLexer.hpp  SimplParse.cpp  SimplParse.hpp  main.cpp  prueba.simpl  prueba.txt
CompiladoresI_Project_TestCases/: assign.simpl  bool_arrays.simpl  boolean_variables.simpl  for.simpl  func_call_ref.simpl  func_calls_val.simpl  if.simpl  int_arrays.simpl  int_variables.simpl  int_variables.simpl:Zone.Identifier  relational.simpl  while.simpl
SimplDFA/: Addition.jff  Delimiters.jff  Division_And_Comments.jff  Division_And_Comments3.jff  EOF.jff  Equal_And_Assignment.jff  GreaterThan.jff  GreaterThanOrEqualTo.jff  Ident.jff  LessThanOrEqualTo.jff  Module.jff  Multiplication.jff  NotEqual.jff  Number.jff  StringLiteral.jff  Subtraction.jff
